# bsfl-detection-counting-benchmark

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
reports/: preparation_summary.json
reports/detection_counting_benchmark/: predictions.csv  ranking.csv  summary.json
reports/paper_q4_prep/: README.md  abstract_draft.md  experiment_plan.md  figure_insert_guide.md  key_results.json  manuscript_draft.md  paper_outline.md  response_to_reviewers.md  results_table_detection_counting.csv  reviewer_experiment_results_summary.md  reviewer_experiment_runbook.md  statistical_tests.csv  strengthening_summary.md  tables_for_manuscript.md  tables_for_manuscript_multiseed.md
reports/regression/: metrics.json  predictions.csv
reports/regression_size_benchmark/: regression_predictions.csv  regression_ranking.csv  size_classification_predictions.csv  (+2 more)
scripts/: analyze_reviewer_experiments.py  benchmark_detection_counting_methods.py  benchmark_regression_size_methods.py  benchmark_yolo_multiseed.py  benchmark_yolo_postprocessing_sweep.py  benchmark_yolo_reviewer_training.py  benchmark_yolo_robustness.py  benchmark_yolo_variants.py  build_ieee_figures.py  build_ieee_split_figures.py  build_paper_prep.py  evaluate_yolo_counting_weights.py  prepare_datasets.py  run_all_baselines.py  run_gpu_docker_tasks.ps1  run_reviewer_experiments_gpu.ps1  train_detection_yolo.py  train_regression_baseline.py  train_regression_gpu_torch.py  train_sex_classification_baseline.py  train_size_classification_baseline.py
(+55 files in other folders)
